# airtag-glitcher

./: Cargo.toml  README.md  flash.sh  memory.x
.cargo/: config
src/: main.rs
